Tue Jul 29 11:47:55 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* vms/odbc_driver_axp.opt win32/FreeTDS.def: updates
	* src/odbc/checkexport.sh(added):
	- shell script to check if exports file needs updating

Tue Jul 29 10:55:29 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/native.c src/odbc/prepare_query.h:
	- add native_sql procedure to implement SQLNativeSql

Mon Jul 28 23:50:13 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: merge some SQLGetInfo stuff

Mon Jul 28 17:26:58 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/error.c src/odbc/odbc.c:
	- some fixes after merge
	- merge fix for leak on connection fail

Mon Jul 28 10:18:53 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* include/Makefile.am install tdsiconv.h, for now
	* src/apps/tsql.c check for CODESET
	* src/dblib/dblib.c src/dblib/unittests/dbmorecmds.c
	- fix dbmorecmds and its unit test

Mon Jul 28 15:45:15 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- continue merge from Steve patch:
	 - merge dsn stuff (save and SQLGetInfo)

Mon Jul 28 14:28:28 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/error.c src/odbc/odbc.c:
	* src/odbc/prepare_query.c:
	- continue merge from Steve patch:
	 - merge error support (need test for state v2 from server errors)

Sun Jul 27 18:20:03 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- continue merging from Steve patch:
	 - use attribute for connection
	 - add SQLGetConnectAttr

Sun Jul 27 14:06:44 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/api_status.txt include/tdsodbc.h src/odbc/error.c:
	* src/odbc/odbc.c src/odbc/odbc_util.c:
	- continue merging Steve patch:
	 - used attribute structure for environment
	 - add SQLGetEnvAttr

Sun Jul 27 13:25:22 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: update version
	* src/odbc/odbc.c: